Ensure feeling buttons arent overflowing

--- a/EatMyMoviesSite/wwwroot/css/site.css
+++ b/EatMyMoviesSite/wwwroot/css/site.css
@@ -143,6 +143,11 @@ html {
     .poster-on-detail {
         max-height: 100vw;
     }
+
+    .genre-button {
+        font-size: 10px;
+        overflow: hidden;
+    }
 }
 
 
